Changed JAVA APP gutenberg books path finding to be similar to C# and JS implementations (get path from system env variable)